fix spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -176,4 +176,5 @@ input {
 
 .sortby {
 	margin-left: 1rem;
+	margin-bottom: 1rem;
 }
